@@ -42,8 +42,8 @@
     <File name="Hyena.Data.Query/QueryFieldSet.cs" subtype="Code" buildaction="Compile" />
     <File name="Hyena.Data.Sqlite/DatabaseColumn.cs" subtype="Code" buildaction="Compile" />
     <File name="Hyena.Data.Sqlite/DatabaseAttributes.cs" subtype="Code" buildaction="Compile" />
-    <File name="Hyena.Data.Sqlite/ModelProvider.cs" subtype="Code" buildaction="Compile" />
-    <File name="Hyena.Data.Sqlite/ModelCache.cs" subtype="Code" buildaction="Compile" />
+    <File name="Hyena.Data.Sqlite/SqliteModelProvider.cs" subtype="Code" buildaction="Compile" />
+    <File name="Hyena.Data.Sqlite/SqilteModelCache.cs" subtype="Code" buildaction="Compile" />
     <File name="Hyena.Data.Sqlite/HyenaSqliteCommand.cs" subtype="Code" buildaction="Compile" />
     <File name="Hyena.Data.Sqlite/HyenaSqliteConnection.cs" subtype="Code" buildaction="Compile" />
     <File name="Hyena.Data.Sqlite/ICacheableDatabaseModel.cs" subtype="Code" buildaction="Compile" />
