@@ -1,3 +1,14 @@
+2008-01-18  Scott Peterson <lunchtimemama@gmail.com> 
+
+	* src/Core/Hyena/Hyena.Data.Sqlite/ModelProvider.cs,
+	  src/Core/Hyena/Hyena.Data.Sqlite/SqliteModelProvider.cs,
+	  src/Core/Banshee.Services/Banshee.Database/BansheeModelProvider.cs:
+	  Renamed ModelProvider to SqliteModelProvider
+	* src/Core/Hyena/Hyena.Data.Sqlite/ModelCache.cs,
+	  src/Core/Hyena/Hyena.Data.Sqlite/SqilteModelCache.cs,
+	  src/Core/Banshee.Services/Banshee.Database/BansheeModelCache.cs: Renamed
+	  ModelCache to SqliteModelCache
+
 2008-01-18  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* data/banshee.desktop.in.in: Merge x-content/* support from stable.
